# Trabalho-CG-25

./: .gitignore  CMakeLists.txt  README.md  clean_primitives_UNIX.sh  config_all_primitives.xml  config_example.xml  config_single_model.xml  config_solar_system.xml  config_test.xml  generate_all_primitives_UNIX.sh  generate_all_primitives_WINDOWS.bat  solar_system_setup_UNIX.sh  solar_system_setup_WINDOWS.bat
Phase 1/: 3dfileformat.txt
config/: config_all_primitives.xml  config_single_model.xml  config_solar_system.xml  config_test.xml
generator/include/: box.hpp  cone.hpp  cylinder.hpp  plane.hpp  sphere.hpp  torus.hpp
generator/src/: generator.cpp
generator/src/shapes/: box.cpp  cone.cpp  cylinder.cpp  plane.cpp  sphere.cpp  torus.cpp
include/: camera.hpp  config.hpp  frustum.hpp  group.hpp  helper.hpp  matrix4x4.hpp  printer.hpp  vector3.hpp  vector4.hpp
include/engine/: camera.hpp  config.hpp  frustum.hpp  group.hpp  light.hpp  material.hpp  model.hpp
include/engine/transforms/: rotation.hpp  rotation_dynamic.hpp  rotation_static.hpp  translation.hpp  translation_dynamic.hpp  translation_static.hpp
include/generator/: box.hpp  cone.hpp  cylinder.hpp  patch.hpp  plane.hpp  shape_generator.hpp  sphere.hpp  torus.hpp
include/math/: math_utils.hpp  matrix4x4.hpp  vector2.hpp  vector3.hpp
include/transforms/: rotation.hpp  rotation_dynamic.hpp  rotation_static.hpp  translation.hpp  translation_dynamic.hpp  translation_static.hpp
include/utils/: printer.hpp
scripts/: clean_primitives_WINDOWS.bat  generate_all_primitives_UNIX.sh  generate_all_primitives_WINDOWS.bat  solar_system_setup_UNIX.sh  solar_system_setup_WINDOWS.bat
src/: camera.cpp  config.cpp  frustum.cpp  generator.cpp  group.cpp  main.cpp  matrix4x4.cpp  vector3.cpp  vector4.cpp
src/engine/: CmakeLists.txt  camera.cpp  config.cpp  frustum.cpp  group.cpp  light.cpp  main.cpp  material.cpp  model.cpp
src/engine/transforms/: rotation_dynamic.cpp  rotation_static.cpp  translation_dynamic.cpp  translation_static.cpp
src/generator/: CMakeLists.txt  main.cpp
src/generator/shapes/: box.cpp  cone.cpp  cylinder.cpp  patch.cpp  (+3 more)
src/math/: CmakeLists.txt  math_utils.cpp  matrix4x4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/transforms/: rotation_dynamic.cpp  rotation_static.cpp  translation_dynamic.cpp  translation_static.cpp
